--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.application.wisatacilacap">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -24,13 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MenuKuliner"></activity>
-        <activity android:name=".Kuliner.KulinerTengiri" />
-        <activity android:name=".Kuliner.KulinerLanthing" />
-        <activity android:name=".Kuliner.KulinerSukun" />
-        <activity android:name=".Kuliner.KulinerMendoan" />
-        <activity android:name=".Kuliner.KulinerSate" />
-        <activity android:name=".Kuliner.KulinerBrekecek" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -43,6 +38,31 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".Maps.MapsKulinerTengiri"
+            android:label="@string/title_activity_maps_kuliner_tengiri"></activity>
+        <activity
+            android:name=".Maps.MapsKulinerSukun"
+            android:label="@string/title_activity_maps_kuliner_sukun" />
+        <activity
+            android:name=".Maps.MapsKulinerSate"
+            android:label="@string/title_activity_maps_kuliner_sate" />
+        <activity
+            android:name=".Maps.MapsKulinerMendoan"
+            android:label="@string/title_activity_maps_kuliner_mendoan" />
+        <activity
+            android:name=".Maps.MapsKulinerLanthing"
+            android:label="@string/title_activity_maps_kuliner_lanthing" />
+        <activity
+            android:name=".Maps.MapsKulinerBrekecek"
+            android:label="@string/title_activity_maps_kuliner_brekecek" />
+        <activity android:name=".MenuKuliner" />
+        <activity android:name=".Kuliner.KulinerTengiri" />
+        <activity android:name=".Kuliner.KulinerLanthing" />
+        <activity android:name=".Kuliner.KulinerSukun" />
+        <activity android:name=".Kuliner.KulinerMendoan" />
+        <activity android:name=".Kuliner.KulinerSate" />
+        <activity android:name=".Kuliner.KulinerBrekecek" />
         <activity
             android:name=".Maps.MapsHotelWhiz"
             android:label="@string/title_activity_maps_hotel_whiz" />
