--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation 'com.android.support:palette-v7:28.0.0'
 
     implementation 'com.ms-square:expandableTextView:0.1.4'
+
+    implementation 'com.scwang.wave:MultiWaveHeader:1.0.0-alpha-1'
 }
